// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HvDatepicker calendar custom properties should render correctly 1`] = `
<div>
  <div
    class="HvDatePicker-root HvFormElement-root"
    id="testingDatePicker"
    locale="en-US"
  >
    <div
      class="HvBaseDropdown-root HvDatePicker-dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="dialog"
        class="HvBaseDropdown-anchor"
        role="combobox"
        tabindex="-1"
      >
        <div
          class="HvBaseDropdown-header"
          role="textbox"
          tabindex="0"
        >
          <div
            class="HvBaseDropdown-selection"
          >
            <p
              class="HvTypography-root HvTypography-placeholderText"
            >
              I'M THE PLACEHOLDER
            </p>
          </div>
          <div
            class="HvDatePicker-icon HvIconBase-root HvIconBase-s"
            name="Calendar"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                fill="#414141"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HvDatepicker ranged calendar should render correctly 1`] = `
<div>
  <div
    class="HvDatePicker-root HvFormElement-root"
    locale="en-US"
  >
    <div
      class="HvBaseDropdown-root HvDatePicker-dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="dialog"
        class="HvBaseDropdown-anchor"
        role="combobox"
        tabindex="-1"
      >
        <div
          class="HvBaseDropdown-header"
          role="textbox"
          tabindex="0"
        >
          <div
            class="HvBaseDropdown-selection"
          >
            <p
              class="HvTypography-root HvTypography-normalText"
            >
              5 - 10 Jan 2019
            </p>
          </div>
          <div
            class="HvDatePicker-icon HvIconBase-root HvIconBase-s"
            name="Calendar"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                fill="#414141"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HvDatepicker sample snapshot testing Main 1`] = `
<div>
  <div
    class="HvDatePicker-root HvFormElement-root"
    id="DatePicker"
    locale="en-US"
  >
    <div
      class="HvBaseDropdown-root HvDatePicker-dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="dialog"
        aria-label="Date"
        class="HvBaseDropdown-anchor"
        role="combobox"
        tabindex="-1"
      >
        <div
          aria-label="Date"
          class="HvBaseDropdown-header"
          role="textbox"
          tabindex="0"
        >
          <div
            class="HvBaseDropdown-selection"
          >
            <p
              class="HvTypography-root HvTypography-placeholderText"
            >
              Select date
            </p>
          </div>
          <div
            class="HvDatePicker-icon HvIconBase-root HvIconBase-s"
            name="Calendar"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                fill="#414141"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HvDatepicker single calendar should render correctly 1`] = `
<div>
  <div
    class="HvDatePicker-root HvFormElement-root"
    locale="en-US"
  >
    <div
      class="HvBaseDropdown-root HvDatePicker-dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="dialog"
        class="HvBaseDropdown-anchor"
        role="combobox"
        tabindex="-1"
      >
        <div
          class="HvBaseDropdown-header"
          role="textbox"
          tabindex="0"
        >
          <div
            class="HvBaseDropdown-selection"
          >
            <p
              class="HvTypography-root HvTypography-normalText"
            >
              1 Jan 2019
            </p>
          </div>
          <div
            class="HvDatePicker-icon HvIconBase-root HvIconBase-s"
            name="Calendar"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                fill="#414141"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HvDatepicker with minimum configuration should render correctly 1`] = `
<div>
  <div
    class="HvDatePicker-root HvFormElement-root"
    locale="en-US"
  >
    <div
      class="HvBaseDropdown-root HvDatePicker-dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="dialog"
        class="HvBaseDropdown-anchor"
        role="combobox"
        tabindex="-1"
      >
        <div
          class="HvBaseDropdown-header"
          role="textbox"
          tabindex="0"
        >
          <div
            class="HvBaseDropdown-selection"
          >
            <p
              class="HvTypography-root HvTypography-placeholderText"
            />
          </div>
          <div
            class="HvDatePicker-icon HvIconBase-root HvIconBase-s"
            name="Calendar"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M10.5 2V0h-1v2h-3V0h-1v2H0v14h16V2zM15 15H1V3h14zM3 6h2v2H3zm4 0h2v2H7zm4 0h2v2h-2zm-8 4h2v2H3zm4 0h2v2H7zm4 0h2v2h-2z"
                fill="#414141"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
